--- a/pathfinder/two-col-left-sidebar.html
+++ b/pathfinder/two-col-left-sidebar.html
@@ -26,7 +26,7 @@
             aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a href="#" class="navbar-brand">Sandia XYZ Application</a>
+    <a href="#" class="navbar-brand">XYZ Application</a>
     <div class="user-welcome ml-auto">
       <img src="../../assets/images/user-photo.jpg" alt="user photo">
       Welcome, User
